Accidentally made pulse fire weapon OP, fixed now

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Collectibles/collectible_spawner.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Map/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Weapons/Types/pulse.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Player/player.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/sniper.tscn", "res://Scenes/Weapons/Types/shotgun.tscn", "res://Scenes/Weapons/projectile.tscn", "res://Scenes/Weapons/Types/pulse.tscn", "res://Scenes/Weapons/Types/cannon.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Levels/level_1.tscn")
-current_scene="res://Scenes/Player/player.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Boss/BossStateMachine/BossStates/BossFinal.gd", "res://Boss/bulletBoss.gd", "res://Scenes/Weapons/Types/cannon.gd", "res://Scenes/Collectibles/collectible_spawner.gd", "res://Boss/BossStateMachine/BossStates/DashBoss.gd", "res://Scenes/Enemies/enemy_spawner.gd", "res://Scenes/Collectibles/experience_orb.gd", "res://Boss/BossStateMachine/FiniteStateMachine.gd", "res://Boss/BossStateMachine/BossStates/FollowBoss.gd", "res://Scenes/Collectibles/heart.cs", "res://Boss/BossStateMachine/BossStates/IdleBoss.gd", "res://Scenes/Enemies/jellyfish.cs", "res://Scenes/Levels/level_manager.gd", "res://Scenes/Player/pl.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/PlayerSubscenes/player_upgrader.gd", "res://Scenes/Weapons/projectile.gd", "res://Scenes/Weapons/Types/pulse.gd", "res://README.md", "res://Scenes/Collectibles/seashell.cs", "res://Boss/BossStateMachine/BossStates/ShootBoss.gd", "res://Scenes/Weapons/Types/shotgun.gd", "res://Scenes/Weapons/Types/sniper.gd", "res://Scenes/Map/spawner.gd", "res://Scenes/Weapons/weapons_base.gd"]
-selected_script="res://Scenes/Collectibles/collectible_spawner.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
