--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Weapons/Types/pulse.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/enemy_spawner.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Menu/", "res://Scenes/Map/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/", "res://Libraries/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=-252
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Menu/game_over.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/Menu/options(remake).tscn", "res://Scenes/Enemies/enemySpawner.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
+center_split_offset=-574
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scenes/Player/PlayerSubscenes/player_upgrader.gd"]
+selected_script="res://Scenes/Player/PlayerSubscenes/player_upgrader.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
