--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,11 +17,35 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Player/cooldown_bar.gd"
 }, {
+"base": &"stateBoss",
+"class": &"DashBoss",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/BossStates/DashBoss.gd"
+}, {
 "base": &"State",
 "class": &"DeathState",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Player/PlayerStates/death_state.gd"
+}, {
+"base": &"Node2D",
+"class": &"FiniteStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/FiniteStateMachine.gd"
+}, {
+"base": &"stateBoss",
+"class": &"FollowBoss",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/BossStates/FollowBoss.gd"
+}, {
+"base": &"stateBoss",
+"class": &"IdleBoss",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/BossStates/IdleBoss.gd"
 }, {
 "base": &"State",
 "class": &"IdleState",
@@ -46,6 +70,18 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Weapons/Types/machine_gun.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerUpgrader",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/PlayerSubscenes/player_upgrader.gd"
+}, {
+"base": &"stateBoss",
+"class": &"ShootBoss",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/BossStates/ShootBoss.gd"
 }, {
 "base": &"Node2D",
 "class": &"Shotgun",
@@ -100,4 +136,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Map/spawner.gd"
+}, {
+"base": &"Node2D",
+"class": &"stateBoss",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Boss/BossStateMachine/BossStates/stateBoss.gd"
 }])
