--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -107,20 +107,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/Enemies/enemyStats.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
 [res://Scenes/Player/PlayerStates/walking_state.gd]
 
 state={
@@ -219,20 +205,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/Player/hand.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scenes/Levels/level_3_gen.cs]
 
 state={
@@ -271,20 +243,6 @@ state={
 "h_scroll_position": 0,
 "row": 9,
 "scroll_position": 9.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/Player/cam.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 41,
-"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -355,6 +313,20 @@ state={
 "h_scroll_position": 0,
 "row": 18,
 "scroll_position": 18.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Player/PlayerSubscenes/player_upgrader.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
