--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/Menu/options(remake).tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Menu/game_over.tscn", "res://Scenes/Menu/MainMenu.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/Menu/options(remake).tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Menu/game_over.tscn")
+current_scene="res://Scenes/Menu/game_over.tscn"
 center_split_offset=-574
 selected_bottom_panel_item=12
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Enemies/enemy_spawner.gd", "res://Scenes/Map/spawner.gd"]
-selected_script="res://Scenes/Map/spawner.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
