--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -71,6 +71,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Weapons/Types/machine_gun.gd"
 }, {
+"base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/player.gd"
+}, {
 "base": &"Node",
 "class": &"PlayerUpgrader",
 "icon": "",
