--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,7 +15,7 @@ list=Array[Dictionary]([{
 "class": &"CooldownBar",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scenes/Player/cooldown_bar.gd"
+"path": "res://Scenes/Player/PlayerSubscenes/cooldown_bar.gd"
 }, {
 "base": &"stateBoss",
 "class": &"DashBoss",
@@ -28,6 +28,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Player/PlayerStates/death_state.gd"
+}, {
+"base": &"Area2D",
+"class": &"ExperienceOrb",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Collectibles/experience_orb.gd"
 }, {
 "base": &"Node2D",
 "class": &"FiniteStateMachine",
