exp dropped by enemies

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/jellyfish.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Menu/", "res://Scenes/Map/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/", "res://Libraries/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Collectibles/experience_orb.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Menu/", "res://Scenes/Map/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/", "res://Libraries/", "res://Assets/", "res://Assets/SFX/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Menu/game_over.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/Menu/options(remake).tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Audio/bg_muisc.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/sniper.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Menu/game_over.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/Menu/options(remake).tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Audio/bg_muisc.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/sniper.tscn", "res://Scenes/Collectibles/experience_orb.tscn")
+current_scene="res://Scenes/Collectibles/experience_orb.tscn"
 center_split_offset=-576
-selected_bottom_panel_item=14
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Enemies/jellyfish.cs", "res://Scenes/Menu/MainMenu.cs"]
-selected_script="res://Scenes/Enemies/jellyfish.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
